[package]
name = "oxychem"
version = "0.1.0"
authors = ["Louis C. Murguía <louiscmm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.4"
json = "0.12.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
